; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_debug_marker_begin.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_debug_marker_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i32, i8*, float*)* }

@.str = private unnamed_addr constant [22 x i8] c"gs_debug_marker_begin\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"(null)\00", align 1
@thread_graphics = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_debug_marker_begin(float* %0, i8* %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca i8*, align 8
  store float* %0, float** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 @gs_valid(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %23

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %8
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8** %4, align 8
  br label %12

12:                                               ; preds = %11, %8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @thread_graphics, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32 (i32, i8*, float*)*, i32 (i32, i8*, float*)** %15, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @thread_graphics, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = load float*, float** %3, align 8
  %22 = call i32 %16(i32 %19, i8* %20, float* %21)
  br label %23

23:                                               ; preds = %12, %7
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
